css/style.css
html, body {height:100%; overflow:hidden;}


@font-face {
    font-family: 'Silverado';
    src: url('../font/svcm____-webfont.woff2') format('woff2'),
         url('../font/svcm____-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

input[type=number]::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

#label_text {
  position: absolute;
}

#container {
  position: relative;
  display:block;
  top: 0;
  left: 0;
  height:100%;
  width:100%;
  overflow:hidden;
}

#back {
    position: absolute;
    top: -15%;
    height: 130%;
    left: 0;
    width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    z-index: -1;
    opacity: .7;
}

#img_back {
    position: absolute;
    top: 0%;
    left: 50%;
    height: 100%;
    display: block;
    z-index: 0;
    border: 1px solid #000;
    box-shadow: 0 0 10px 8px #000;
}

#hunt_back {
    position: absolute;
    top: 30%;
    left: 0;
    width: 100%;
    display: block;
    z-index: 0;
    display:none;
}

#hunt_icon {
    position: absolute;
    top: 20%;
    left: 50%;
    width: 30%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    z-index: 0;
    margin-left: -15%;
}

#label_text {
  color: #ffffff;
  text-shadow: 3px 2px #333333;
  overflow: visible;
  visibility: show;
  z-index: 1;
  font-size: 3em;
  font-weight:500;
  text-align: center;
  position: absolute;
  top: 75%;
  left: 50%;
  width: 400px;
  height: 50px;
  margin-left: -200px;
  margin-top: -25px;
  font-family: 'Silverado';
  cursor: default;
}

#label_text.index {
  top: 50%;
  left: 50%;
  width: 600px;
  height: 50px;
  margin-left: -300px;
  margin-top: -25px;
  font-size: 5em;
  color: #888
}

#img {
    position: absolute;
    height: 98%;
    display: block;
    top: 0%;
    left: 50%;
    --borderWidth: 2em;
    border-bottom-left-radius: var(--borderWidth);
    border-bottom-right-radius: var(--borderWidth);
    z-index: 25;
    border: 1px solid #000;
    box-shadow: 0 0 10px 8px black;
}

#video {
    position: absolute;
    width: 100%;
    display: block;
    top: 0;
    left: 0%;
    z-index: 20;
    box-shadow: 10px 10px 15px black;
}

table {
  position: absolute;
  top: 15%
}


tr {
  position: relative;
}

tr.spaceUnder>td {
  padding-bottom: 5em;
}

.button {
    background-color: Transparent;
    color: #888;
    overflow: visible;
    visibility: show;
    z-index: 96;
    font-size: 2em;
    font-weight:500;
    text-align: center;
    position: absolute;
    top: 94%;
    left: 98%;
    width: 100px;
    height: 50px;
    line-height: 50px;
    margin-left: -100px;
    margin-top: -25px;
    padding: 15px 25px;
    font-family: 'Silverado';
    cursor: pointer;
    border: none;
    opacity: 0.5;
}

#back_button {
    left: 0.5%;
    background-color: Transparent;
    color: #888;
    overflow: visible;
    visibility: show;
    z-index: 93;
    font-size: 1em;
    font-weight:500;
    text-align: center;
    position: absolute;
    top: 94%;
    text-decoration: none;
    width: 7%;
    font-family: 'Silverado';
    cursor: pointer;
    border: none;
    opacity: 0.5;
    display: flex;
    align-items: center;
}
#back_button > svg {
  margin-right: .5em;
  height: 1.15em;
  fill: #ddd;
  position: relative;
  top: -1px;
}

#back_button:hover {
  color: yellow;
  }

.button:hover {
  color: yellow;
  }

.button.active {
  color: white;
  }

.button_video {
  background-color: Transparent;
  color: #444;
  overflow: visible;
  visibility: show;
  z-index: 6;
  font-size: 4em;
  font-weight:500;
  text-align: center;
  position: absolute;
  top: 90%;
  left: 50%;
  width: 200px;
  height: 100px;
  line-height: 100px;
  margin-left: -100px;
  margin-top: -50px;
  padding: 15px 25px;
  font-family: 'Silverado';
  cursor: pointer;
  border: none;
  opacity: 0.9;
  transition:all .5s linear;
}

.button_video:hover {
  color: yellow;
  }

  .fadeOut{
    opacity:0.2;
  }

#hunt_desc_text {
  color: #aaa;
  text-shadow: 3px 2px #222;
  overflow: visible;
  visibility: show;
  z-index: 1;
  font-size: 1.5em;
  font-weight:500;
  text-align: center;
  position: absolute;
  top: 20%;
  left: 50%;
  width: 500px;
  height: 50px;
  margin-left: -250px;
  margin-top: -25px;
  font-family: 'Silverado';
  cursor: default;
}

#quary_name {
  position: absolute;
  font-size:30px;
  font-weight:300;
  color: #555;
  text-decoration: none;
  display: block;
  width: 500px;
  height: 50px;
  font-family: 'Silverado';
  cursor: default;
}

.quarry {
  position: absolute;
  font-size:30px;
  font-weight:200;
  color: #999;
  text-decoration: none;
  display: block;
  width: 150px;
  height: 50px;
  font-family: 'Silverado';
  cursor: pointer;
}

.quarry:hover {
  color: yellow;
}

.start_showdown {
  color: #444;
  overflow: visible;
  visibility: show;
  z-index: 1;
  font-size: 3em;
  font-weight:500;
  text-align: center;
  position: absolute;
  text-decoration: none;
  top: 85%;
  left: 50%;
  width: 400px;
  height: 50px;
  margin-left: -200px;
  margin-top: -25px;
  font-family: 'Silverado';
}

.start_showdown:hover {
  color: yellow;
}

.token {
  position:absolute;
  top: 41%;
  z-index:4;
  display: block;
}

#common.token {
  opacity: 0.5;
}

#common.token:hover {
  opacity: 0.8;
}

#lantern.token {
  opacity: 0.5;
}

#lantern.token:hover {
  opacity: 0.8;
}

#monster.token {
  z-index: 6;
  -webkit-filter: drop-shadow(2px 2px 2px #222);
  filter: drop-shadow(2px 2px 2px #222);
}

#monster.token:hover {
    /* Start the shake animation and make the animation last for 0.5 seconds */
    animation: shake 1s;
    /* When the animation is finished, start again */
    animation-iteration-count: infinite;
    animation-delay: 0.3s;
}

#survivors.token {
  z-index: 7;
  -webkit-filter: drop-shadow(2px 2px 2px #222);
  filter: drop-shadow(2px 2px 2px #222);
}
/* ... */

